feat:search page

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -63,7 +63,7 @@
           <input type="search" class="search_input" placeholder="검색어를 입력하세요"> 
       </div>
       <br>
-      <div class="btn_category" style="margin:auto">
+      <div class="btn_category" style="margin:auto" align="center">
           <button type ="button" class="btn btn-outline-info" onclick="start()"data-filter="ALL">ALL</button>
           &emsp;
           &emsp;
